Corrected layout of combat section

--- a/public/main.css
+++ b/public/main.css
@@ -13,9 +13,11 @@ section{
 
 #combat-section{
   position: fixed;
-  height: 250px;
+  top: 0;
+  height: 270px;
   min-width: 250px;
   z-index: 2;
+  background-color: white;
 }
 
 #list-section{
@@ -23,12 +25,26 @@ section{
   height: 5000px;
   top: 260px;
   background: blue;
+  min-width: 250px;
   z-index: 1;
 }
 
 #combat-section article{
   display: flex;
   margin-left: 83px;
+}
+
+#combat-section article .country-title{
+  text-align: center;
+}
+
+#combat-section article img{
+  margin-bottom: 12.5px;
+}
+
+#combat-section article .details{
+  width: 150px;
+  margin: auto;
 }
 
 #combat-section article img{
