--- a/public/main.css
+++ b/public/main.css
@@ -31,3 +31,23 @@ section{
 #chart-panel{
   height: 270px;
 }
+
+#nav-panel{
+  padding-top: 10px;
+  width: 100%;
+  background-color: white;
+  display: flex;
+}
+
+#nav-panel p{
+  text-align: center;
+  flex: 1;
+  margin: 5px 0 5px 0;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  font-size: 20px;
+}
+
+#nav-panel p:hover{
+  cursor: pointer;
+}
