--- a/public/main.css
+++ b/public/main.css
@@ -22,7 +22,7 @@ section{
 #list-section{
   position: relative;
   height: 5000px;
-  top: 330px;
+  top: 370px;
   min-width: 250px;
   z-index: 1;
 }
@@ -53,4 +53,16 @@ section{
 
 #lower-divider{
   margin: 5px 0 0 0;
+}
+
+#fight-btn{
+  padding: 10px;
+  width: 100px;
+  margin: 10px auto 10px auto;
+}
+
+.button{
+  border: 1px solid black;
+  text-align: center;
+  border-radius: 10px;
 }
