--- a/public/list_section.css
+++ b/public/list_section.css
@@ -19,6 +19,10 @@
   height: 110px;
 }
 
+.country-inner-container-left p{
+  margin: 0 5px 0 5px;
+}
+
 .country-robo-img{
   width: 120px;
   height: 120px;
